# poetry-template

./: pyproject.toml
