[tool.poetry]
name = "poetry-template"
version = "0.1.0"
description = ""
authors = ["Ashar Latif <ashar@kpmpower.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
black = "^21.12b0"
isort = "^5.10.1"
pydocstyle = "^6.1.1"

[tool.poetry.scripts]
check = "framecheck.framecheck:process"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
